--- a/tests/kernel_l2norm_test/CMakeLists.txt
+++ b/tests/kernel_l2norm_test/CMakeLists.txt
@@ -19,4 +19,7 @@ target_sources(kernel_l2norm_test
 
 target_link_libraries(
     kernel_l2norm_test
+    pico_stdlib
     pico-tflmicro)
+
+pico_add_extra_outputs(kernel_l2norm_test)
