--- a/tests/kernel_split_test/CMakeLists.txt
+++ b/tests/kernel_split_test/CMakeLists.txt
@@ -19,4 +19,7 @@ target_sources(kernel_split_test
 
 target_link_libraries(
     kernel_split_test
+    pico_stdlib
     pico-tflmicro)
+
+pico_add_extra_outputs(kernel_split_test)
