Updated person detection example, added tests

--- a/examples/person_detection/CMakeLists.txt
+++ b/examples/person_detection/CMakeLists.txt
@@ -6,15 +6,15 @@ set(CMAKE_C_STANDARD 11)
 set(CMAKE_CXX_STANDARD 11)
 
 
-add_executable(detection_responder_test_int8 "")
+add_executable(detection_responder_test "")
 
-target_include_directories(detection_responder_test_int8
+target_include_directories(detection_responder_test
   PRIVATE
   ${CMAKE_CURRENT_LIST_DIR}/.
 )
 
 set_target_properties(
-  detection_responder_test_int8
+  detection_responder_test
   PROPERTIES
   COMPILE_FLAGS -fno-rtti
   COMPILE_FLAGS -fno-exceptions
@@ -22,7 +22,7 @@ set_target_properties(
   COMPILE_FLAGS -nostdlib
 )
 
-target_sources(detection_responder_test_int8
+target_sources(detection_responder_test
   PRIVATE
   ${CMAKE_CURRENT_LIST_DIR}/detection_responder.cpp
   ${CMAKE_CURRENT_LIST_DIR}/detection_responder_test.cpp
@@ -30,12 +30,15 @@ target_sources(detection_responder_test_int8
 )
 
 target_link_libraries(
-  detection_responder_test_int8
+  detection_responder_test
   pico-tflmicro
   hardware_pwm
 )
 
-pico_add_extra_outputs(detection_responder_test_int8)
+pico_enable_stdio_usb(detection_responder_test 1)
+pico_enable_stdio_uart(detection_responder_test 0)
+
+pico_add_extra_outputs(detection_responder_test)
 
 
 add_executable(person_detection_benchmark "")
@@ -57,9 +60,9 @@ set_target_properties(
 target_sources(person_detection_benchmark
   PRIVATE
   ${CMAKE_CURRENT_LIST_DIR}/tensorflow/lite/micro/benchmarks/person_detection_benchmark.cpp
-  ${CMAKE_CURRENT_LIST_DIR}/tensorflow/lite/micro/tools/make/downloads/person_model_int8/no_person_image_data.cpp
-  ${CMAKE_CURRENT_LIST_DIR}/tensorflow/lite/micro/tools/make/downloads/person_model_int8/person_detect_model_data.cpp
-  ${CMAKE_CURRENT_LIST_DIR}/tensorflow/lite/micro/tools/make/downloads/person_model_int8/person_image_data.cpp
+  ${CMAKE_CURRENT_LIST_DIR}/tensorflow/lite/micro/tools/make/downloads/person_model/no_person_image_data.cpp
+  ${CMAKE_CURRENT_LIST_DIR}/tensorflow/lite/micro/tools/make/downloads/person_model/person_detect_model_data.cpp
+  ${CMAKE_CURRENT_LIST_DIR}/tensorflow/lite/micro/tools/make/downloads/person_model/person_image_data.cpp
   ${CMAKE_CURRENT_LIST_DIR}/person_detect_model_data.h
 )
 
@@ -69,18 +72,21 @@ target_link_libraries(
   hardware_pwm
 )
 
+pico_enable_stdio_usb(person_detection_benchmark 1)
+pico_enable_stdio_uart(person_detection_benchmark 0)
+
 pico_add_extra_outputs(person_detection_benchmark)
 
 
-add_executable(person_detection_test_int8 "")
+add_executable(person_detection_test "")
 
-target_include_directories(person_detection_test_int8
+target_include_directories(person_detection_test
   PRIVATE
   ${CMAKE_CURRENT_LIST_DIR}/.
 )
 
 set_target_properties(
-  person_detection_test_int8
+  person_detection_test
   PROPERTIES
   COMPILE_FLAGS -fno-rtti
   COMPILE_FLAGS -fno-exceptions
@@ -88,13 +94,13 @@ set_target_properties(
   COMPILE_FLAGS -nostdlib
 )
 
-target_sources(person_detection_test_int8
+target_sources(person_detection_test
   PRIVATE
   ${CMAKE_CURRENT_LIST_DIR}/model_settings.cpp
   ${CMAKE_CURRENT_LIST_DIR}/person_detection_test.cpp
-  ${CMAKE_CURRENT_LIST_DIR}/tensorflow/lite/micro/tools/make/downloads/person_model_int8/no_person_image_data.cpp
-  ${CMAKE_CURRENT_LIST_DIR}/tensorflow/lite/micro/tools/make/downloads/person_model_int8/person_detect_model_data.cpp
-  ${CMAKE_CURRENT_LIST_DIR}/tensorflow/lite/micro/tools/make/downloads/person_model_int8/person_image_data.cpp
+  ${CMAKE_CURRENT_LIST_DIR}/tensorflow/lite/micro/tools/make/downloads/person_model/no_person_image_data.cpp
+  ${CMAKE_CURRENT_LIST_DIR}/tensorflow/lite/micro/tools/make/downloads/person_model/person_detect_model_data.cpp
+  ${CMAKE_CURRENT_LIST_DIR}/tensorflow/lite/micro/tools/make/downloads/person_model/person_image_data.cpp
   ${CMAKE_CURRENT_LIST_DIR}/model_settings.h
   ${CMAKE_CURRENT_LIST_DIR}/no_person_image_data.h
   ${CMAKE_CURRENT_LIST_DIR}/person_detect_model_data.h
@@ -102,23 +108,26 @@ target_sources(person_detection_test_int8
 )
 
 target_link_libraries(
-  person_detection_test_int8
+  person_detection_test
   pico-tflmicro
   hardware_pwm
 )
 
-pico_add_extra_outputs(person_detection_test_int8)
+pico_enable_stdio_usb(person_detection_test 1)
+pico_enable_stdio_uart(person_detection_test 0)
+
+pico_add_extra_outputs(person_detection_test)
 
 
-add_executable(person_detection_int8 "")
+add_executable(person_detection "")
 
-target_include_directories(person_detection_int8
+target_include_directories(person_detection
   PRIVATE
   ${CMAKE_CURRENT_LIST_DIR}/.
 )
 
 set_target_properties(
-  person_detection_int8
+  person_detection
   PROPERTIES
   COMPILE_FLAGS -fno-rtti
   COMPILE_FLAGS -fno-exceptions
@@ -126,14 +135,14 @@ set_target_properties(
   COMPILE_FLAGS -nostdlib
 )
 
-target_sources(person_detection_int8
+target_sources(person_detection
   PRIVATE
   ${CMAKE_CURRENT_LIST_DIR}/detection_responder.cpp
   ${CMAKE_CURRENT_LIST_DIR}/image_provider.cpp
   ${CMAKE_CURRENT_LIST_DIR}/main.cpp
   ${CMAKE_CURRENT_LIST_DIR}/main_functions.cpp
   ${CMAKE_CURRENT_LIST_DIR}/model_settings.cpp
-  ${CMAKE_CURRENT_LIST_DIR}/tensorflow/lite/micro/tools/make/downloads/person_model_int8/person_detect_model_data.cpp
+  ${CMAKE_CURRENT_LIST_DIR}/tensorflow/lite/micro/tools/make/downloads/person_model/person_detect_model_data.cpp
   ${CMAKE_CURRENT_LIST_DIR}/detection_responder.h
   ${CMAKE_CURRENT_LIST_DIR}/image_provider.h
   ${CMAKE_CURRENT_LIST_DIR}/main_functions.h
@@ -142,23 +151,26 @@ target_sources(person_detection_int8
 )
 
 target_link_libraries(
-  person_detection_int8
+  person_detection
   pico-tflmicro
   hardware_pwm
 )
 
-pico_add_extra_outputs(person_detection_int8)
+pico_enable_stdio_usb(person_detection 1)
+pico_enable_stdio_uart(person_detection 0)
+
+pico_add_extra_outputs(person_detection)
 
 
-add_executable(image_provider_test_int8 "")
+add_executable(image_provider_test "")
 
-target_include_directories(image_provider_test_int8
+target_include_directories(image_provider_test
   PRIVATE
   ${CMAKE_CURRENT_LIST_DIR}/.
 )
 
 set_target_properties(
-  image_provider_test_int8
+  image_provider_test
   PROPERTIES
   COMPILE_FLAGS -fno-rtti
   COMPILE_FLAGS -fno-exceptions
@@ -166,7 +178,7 @@ set_target_properties(
   COMPILE_FLAGS -nostdlib
 )
 
-target_sources(image_provider_test_int8
+target_sources(image_provider_test
   PRIVATE
   ${CMAKE_CURRENT_LIST_DIR}/image_provider.cpp
   ${CMAKE_CURRENT_LIST_DIR}/image_provider_test.cpp
@@ -176,10 +188,13 @@ target_sources(image_provider_test_int8
 )
 
 target_link_libraries(
-  image_provider_test_int8
+  image_provider_test
   pico-tflmicro
   hardware_pwm
 )
 
-pico_add_extra_outputs(image_provider_test_int8)
+pico_enable_stdio_usb(image_provider_test 1)
+pico_enable_stdio_uart(image_provider_test 0)
+
+pico_add_extra_outputs(image_provider_test)
 
