--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -561,3 +561,5 @@ target_link_libraries(
 add_subdirectory("examples/hello_world")
 add_subdirectory("examples/micro_speech")
 add_subdirectory("examples/person_detection")
+
+add_subdirectory("tests/greedy_memory_planner_test")
