Add USB stdio to all tests

--- a/tests/kernel_hard_swish_test/CMakeLists.txt
+++ b/tests/kernel_hard_swish_test/CMakeLists.txt
@@ -21,6 +21,9 @@ set_target_properties(
   COMPILE_FLAGS -nostdlib
 )
 
+pico_enable_stdio_usb(kernel_hard_swish_test 1)
+pico_enable_stdio_uart(kernel_hard_swish_test 0)
+
 target_sources(kernel_hard_swish_test
   PRIVATE
   ${CMAKE_CURRENT_LIST_DIR}/../../tests/kernel_hard_swish_test/hard_swish_test.cpp
