--- a/tests/kernel_arg_min_max_test/CMakeLists.txt
+++ b/tests/kernel_arg_min_max_test/CMakeLists.txt
@@ -21,6 +21,9 @@ set_target_properties(
   COMPILE_FLAGS -nostdlib
 )
 
+pico_enable_stdio_usb(kernel_arg_min_max_test 1)
+pico_enable_stdio_uart(kernel_arg_min_max_test 0)
+
 target_sources(kernel_arg_min_max_test
   PRIVATE
   ${CMAKE_CURRENT_LIST_DIR}/../../tests/kernel_arg_min_max_test/arg_min_max_test.cpp
