--- a/tests/kernel_circular_buffer_test/CMakeLists.txt
+++ b/tests/kernel_circular_buffer_test/CMakeLists.txt
@@ -21,6 +21,9 @@ set_target_properties(
   COMPILE_FLAGS -nostdlib
 )
 
+pico_enable_stdio_usb(kernel_circular_buffer_test 1)
+pico_enable_stdio_uart(kernel_circular_buffer_test 0)
+
 target_sources(kernel_circular_buffer_test
   PRIVATE
   ${CMAKE_CURRENT_LIST_DIR}/../../tests/kernel_circular_buffer_test/circular_buffer_test.cpp
