--- a/tests/kernel_concatenation_test/CMakeLists.txt
+++ b/tests/kernel_concatenation_test/CMakeLists.txt
@@ -21,6 +21,9 @@ set_target_properties(
   COMPILE_FLAGS -nostdlib
 )
 
+pico_enable_stdio_usb(kernel_concatenation_test 1)
+pico_enable_stdio_uart(kernel_concatenation_test 0)
+
 target_sources(kernel_concatenation_test
   PRIVATE
   ${CMAKE_CURRENT_LIST_DIR}/../../tests/kernel_concatenation_test/concatenation_test.cpp
