--- a/tests/kernel_fully_connected_test/CMakeLists.txt
+++ b/tests/kernel_fully_connected_test/CMakeLists.txt
@@ -21,6 +21,9 @@ set_target_properties(
   COMPILE_FLAGS -nostdlib
 )
 
+pico_enable_stdio_usb(kernel_fully_connected_test 1)
+pico_enable_stdio_uart(kernel_fully_connected_test 0)
+
 target_sources(kernel_fully_connected_test
   PRIVATE
   ${CMAKE_CURRENT_LIST_DIR}/../../tests/kernel_fully_connected_test/fully_connected_test.cpp
