--- a/tests/micro_interpreter_test/CMakeLists.txt
+++ b/tests/micro_interpreter_test/CMakeLists.txt
@@ -21,6 +21,9 @@ set_target_properties(
   COMPILE_FLAGS -nostdlib
 )
 
+pico_enable_stdio_usb(micro_interpreter_test 1)
+pico_enable_stdio_uart(micro_interpreter_test 0)
+
 target_sources(micro_interpreter_test
   PRIVATE
   ${CMAKE_CURRENT_LIST_DIR}/../../tests/micro_interpreter_test/micro_interpreter_test.cpp
