--- a/tests/recording_micro_allocator_test/CMakeLists.txt
+++ b/tests/recording_micro_allocator_test/CMakeLists.txt
@@ -21,6 +21,9 @@ set_target_properties(
   COMPILE_FLAGS -nostdlib
 )
 
+pico_enable_stdio_usb(recording_micro_allocator_test 1)
+pico_enable_stdio_uart(recording_micro_allocator_test 0)
+
 target_sources(recording_micro_allocator_test
   PRIVATE
   ${CMAKE_CURRENT_LIST_DIR}/../../tests/recording_micro_allocator_test/recording_micro_allocator_test.cpp
